[tool.poetry]
name = "flask forum app"
version = "0.1.0"
description = ""
authors = ["BlueShiftButterfly <34643088+BlueShiftButterfly@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
pylint = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
