[tool.poetry]
name = "flask forum app"
version = "0.1.0"
description = ""
authors = ["BlueShiftButterfly <34643088+BlueShiftButterfly@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
pylint = "^3.1.0"
python-dotenv = "^1.0.1"
bcrypt = "^4.1.2"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"
flask-login = "^0.6.3"
shortuuid = "^1.0.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
